App classname overflow fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,6 @@
 }
 
 body {
-  margin: 0;
-  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -23,8 +21,7 @@ code {
 }
 
 main {
-  margin-top: 15vh;
-  margin-left: 20px;
+  margin: 15vh auto;
 }
 
 .title {
@@ -47,10 +44,10 @@ main {
 }
 
 .App {
-  width: 100vw;
-  min-height: 100vh;
-  margin: 0 auto;
-  box-shadow: 0 0 35 #eee;
+    width: 100%;
+    min-height: 100vh;
+    margin: 0 auto;
+    box-shadow: 0 0 35 #eee;
 }
 
 .containerRow {
